--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
-[env:esp8266]
+[env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_protocol = ota
-
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+lib_deps = ESP8266HTTPUpdate
