--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -30,3 +30,18 @@ jobs:
           path: |
             .pio/build/**/firmware.bin
             .pio/build/**/firmware-*.bin
+
+      - name: Move firmware to repo folder
+        run: |
+          mkdir -p firmware
+          cp .pio/build/esp8266/firmware.bin firmware/latest.bin
+      
+      - name: Commit and push firmware
+  	run: |
+    	 git config --local user.email "github-actions@github.com"
+    	 git config --local user.name "GitHub Actions"
+    	 git add firmware/latest.bin
+    	 git commit -m "Auto-update firmware"
+    	 git push
+
+
