--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,8 @@
 [env:nodemcuv2]
 platform = espressif8266
-board = nodemcuv2
+board = esp12e
+board_build.flash_size = 4MB
+board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps = ESP8266HTTPUpdate
