--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [env:nodemcuv2]
 platform = espressif8266
 board = esp12e
+board_build.flash_mode = dout
 board_build.flash_size = 4MB
 board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
