--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Move firmware to repo folder
         run: |
           mkdir -p firmware
-          cp .pio/build/*/firmware.bin firmware/latest.bin
+          cp .pio/build/*/firmware.bin firmware/firmware.bin
       
       - name: Commit and push firmware
         run: |
