--- a/platformio.ini
+++ b/platformio.ini
@@ -6,4 +6,4 @@ board_build.flash_size = 4MB
 board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-lib_deps = ESP8266HTTPUpdate
+lib_deps = ESP8266HTTPUpdate,ArduinoJson
