Added JSON dep in platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,5 +6,4 @@ board_build.flash_size = 4MB
 board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-lib_deps = ESP8266HTTPUpdate
-bblanchon/ArduinoJson@^6.21.0
+lib_deps = ESP8266HTTPUpdate,bblanchon/ArduinoJson@^6.21.0
