--- a/platformio.ini
+++ b/platformio.ini
@@ -8,3 +8,4 @@ framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps =
     bblanchon/ArduinoJson @ ^6.21.0
+    OTAUpdater
