--- a/platformio.ini
+++ b/platformio.ini
@@ -8,4 +8,10 @@ framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps =
     bblanchon/ArduinoJson @ ^6.21.0
-    OTAUpdater
+
+; Force deeper library discovery (optional, can help)
+lib_ldf_mode = deep
+
+; Add the library header path — adjust to actual path under lib
+build_flags =
+  -Ilib/OTAUpdater/
