--- a/platformio.ini
+++ b/platformio.ini
@@ -5,13 +5,15 @@ board_build.flash_mode = dout
 board_build.flash_size = 4MB
 board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
-build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-lib_deps =
-    bblanchon/ArduinoJson @ ^6.21.0
 
 ; Force deeper library discovery (optional, can help)
 lib_ldf_mode = deep
 
-; Add the library header path — adjust to actual path under lib
+; Combine all flags into one block
 build_flags =
-  -Ilib/OTAUpdater/
+    -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+    -I lib/OTAUpdater
+
+; Declare libraries once, PlatformIO installs them automatically
+lib_deps =
+    bblanchon/ArduinoJson @ ^6.21.0
