--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ lib_ldf_mode = deep
 ; Combine all flags into one block
 build_flags =
     -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-    -I lib/OTAUpdater
+;    -I lib/OTAUpdater
 
 ; Declare libraries once, PlatformIO installs them automatically
 lib_deps =
