--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ build_flags =
 ; Declare libraries once, PlatformIO installs them automatically
 lib_deps =
     bblanchon/ArduinoJson @ ^6.21.0
+
+lib_ignore = 
