Secret Key Hiden

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,11 @@ build_flags =
 lib_deps =
     bblanchon/ArduinoJson @ ^6.21.0
 
+;resolved the build lib issue error
 lib_ignore = 
+
+;use this if other lib issue arises
+;lib_extra_dirs = ./lib
+
+; load optional local config (will be created by CI)
+extra_configs = platformio_local.ini
