--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -3,17 +3,25 @@ name: Build & Release Firmware
 on:
   push:
     branches: [ main ]
-    tags: ['*']     # releases are created when you push tags like 1.0.0
+    tags: [ '*' ] # releases are created when you push tags like 1.0.0
 
 permissions:
   contents: write
 
+# -------------------------------
+# Prevent overlapping builds
+# -------------------------------
+concurrency:
+  group: firmware-build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -21,7 +29,22 @@ jobs:
           python-version: '3.11'
 
       - name: Install PlatformIO
-        run: python -m pip install -U pip && pip install -U platformio
+        run: |
+          python -m pip install -U pip
+          pip install -U platformio
+
+      - name: Create platformio_local.ini from secrets
+        env:
+          WIFI_SSID: ${{ secrets.WIFI_SSID }}
+          WIFI_PASSWORD: ${{ secrets.WIFI_PASSWORD }}
+        run: |
+          cat > platformio_local.ini <<'EOF'
+[env:esp8266]
+build_flags =
+  -DWIFI_SSID=\"${WIFI_SSID}\"
+  -DWIFI_PASSWORD=\"${WIFI_PASSWORD}\"
+EOF
+          echo "Created platformio_local.ini (not committed)."
 
       - name: Build with PlatformIO
         run: |
@@ -38,7 +61,6 @@ jobs:
       - name: Move firmware to repo folder
         run: |
           mkdir -p firmware
-          # find a firmware binary produced by PlatformIO (handles no-match safely)
           firmware_file=$(ls .pio/build/*/firmware*.bin 2>/dev/null | head -n1 || true)
           if [ -z "$firmware_file" ]; then
             echo "No firmware binary produced by platformio — skipping copy."
@@ -51,16 +73,10 @@ jobs:
         run: |
           git config --local user.email "github-actions@github.com"
           git config --local user.name "GitHub Actions"
-
-          # Stage the firmware file (respects .gitignore)
           git add -A firmware || true
-
-          # If there are no staged changes, skip commit and push
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
             git commit -m "ci: auto-update firmware"
             git push
           fi
-        
-
