still trying fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,6 @@ lib_ignore =
 
 ;use this if other lib issue arises
 ;lib_extra_dirs = ./lib
+
+; Include build overrides from github secret file
+extra_configs = pio_override.ini
