--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build with PlatformIO
         run: |
-          pio run --project-conf pio_override.ini
+          pio run
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
