--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,6 @@
+[platformio]
+extra_configs = pio_override.ini   ;
+
 [env:nodemcuv2]
 platform = espressif8266
 board = esp12e
@@ -23,6 +26,3 @@ lib_ignore =
 
 ;use this if other lib issue arises
 ;lib_extra_dirs = ./lib
-
-; Include build overrides from github secret file
-extra_configs = pio_override.ini
