--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@ board_build.flash_mode = dout
 board_build.flash_size = 4MB
 board_build.ldscript = eagle.flash.4m2m.ld
 framework = arduino
+monitor_speed = 115200
 
 ; Force deeper library discovery (optional, can help)
 lib_ldf_mode = deep
